[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robustness-metrics"
version = "1.0"
dependencies = ["networkx"]
requires-python = ">= 3.11"
dependencies = [
    "networkx",
    "numpy",
    "scipy",
    "torch"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metrics*"]